fixing almost completed

--- a/sections/state_of_the_art.tex
+++ b/sections/state_of_the_art.tex
@@ -295,6 +295,7 @@ In essence, post-processing represents the culmination of efforts to instill fai
 
 A comprehensive list of the several fairness techniques is showed in \cref{fig:fairness_techniques}
 
+\begin{adjustbox}{width=\textwidth}
 \begin{figure}
     \centering
     \begin{tikzpicture}[node distance=2cm]
@@ -333,6 +334,7 @@ A comprehensive list of the several fairness techniques is showed in \cref{fig:f
     \caption{Fairness addressing techniques}
     \label{fig:fairness_techniques}
 \end{figure}
+\end{adjustbox}
 
 \subsection{Pre-processing Techniques for Addressing Fairness in AI}
 
