--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -14,6 +14,7 @@
 \usepackage{acronym}
 \usepackage{tikz}
 \usepackage{float}
+\usepackage{adjustbox}
 \usepackage{pgfplots}
 \pgfplotsset{width=10cm,compat=1.9}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
