--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -234,7 +234,7 @@ In order to provide a tabular representation of the results it's necessary to as
     \centering
     \begin{tabular}{|c|c|c|c|c|c|c|c|}
         \hline
-        \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DIs} & \textbf{DIc} & \textbf{DIp} & \textbf{DIh} & \textbf{DIe} \\
+        \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} $uparrow$ & \textbf{DIs} $uparrow$ & \textbf{DIc} $uparrow$ & \textbf{DIp} $uparrow$ & \textbf{DIh} $uparrow$ & \textbf{DIe} $uparrow$ \\
         \hline
         DA & XGB & 0.9975 & 0.9670 & 0.9813 & 0.9901 & 0.9340 & 0.0007 \\
         \hline
@@ -275,7 +275,7 @@ About the results showed in \cref{tab:results_di} results it's possible to make 
     \centering
     \begin{tabular}{|c|c|c|c|c|c|c|c|}
         \hline
-        \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} & \textbf{DPDs} & \textbf{DPDc} & \textbf{DPDp} & \textbf{DPDh} & \textbf{DPDe} \\
+        \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} $uparrow$ & \textbf{DPDs} $downarrow$ & \textbf{DPDc} $downarrow$ & \textbf{DPDp} $downarrow$ & \textbf{DPDh} $downarrow$ & \textbf{DPDe} $downarrow$ \\
         \hline
         DA & XGB & 0.9975 & 0.0074 & 0.0026 & 0.0014 & 0.0011 & 0.0007\\
         \hline
