--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -335,7 +335,7 @@ Choosing a fairness metric given a fairness notion, or vice versa, requires a nu
     \centering
     \begin{tikzpicture}[node distance=2cm]
         \node (start) [startstop] {Protected attribute chosen};
-        \node (choice) [decision, below of=start, yshift=-1cm] {What is the starting point?};
+        \node (choice) [decision, below of=start, yshift=-1cm] {Metric or Notion?};
         \node (fm) [startstop, left of=choice, xshift=-2cm] {Fairness Metric};
         \node (fn) [startstop, right of=choice, xshift=2cm] {Fairness Notion};
         \node (dfg) [startstop, below of=fm] {Definition of fairness goals};
