--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -15,6 +15,7 @@
 \usepackage{tikz}
 \usepackage{float}
 \usepackage{adjustbox}
+\usepackage[table]{xcolor}
 \usepackage{pgfplots}
 \pgfplotsset{width=10cm,compat=1.9}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
