--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -20,6 +20,9 @@
 \pgfplotsset{width=10cm,compat=1.9}
 %\usepackage[linesnumbered,ruled,vlined]{algorithm2e}
 
+\definecolor{darkred}{RGB}{139,0,0} % RGB values for dark red
+\definecolor{darkgreen}{RGB}{0,100,0} % RGB values for dark green
+
 \usetikzlibrary{shapes.geometric, arrows}
 \graphicspath{{./sections/}}
 
