--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -236,21 +236,21 @@ In order to provide a tabular representation of the results it's necessary to as
         \hline
         \textbf{FairAlg} & \textbf{Model} & \textbf{Acc} $uparrow$ & \textbf{DIs} $uparrow$ & \textbf{DIc} $uparrow$ & \textbf{DIp} $uparrow$ & \textbf{DIh} $uparrow$ & \textbf{DIe} $uparrow$ \\
         \hline
-        DA & XGB & 0.9975 & 0.9670 & 0.9813 & 0.9901 & 0.9340 & \textcolor{red}0.0007 \\
+        DA & XGB & 0.9975 & 0.9670 & 0.9813 & 0.9901 & 0.9340 & \textcolor{darkred}{0.0007} \\
         \hline
-        DA & RF & 0.9987 & 0.9670 & 0.9770 & 0.9901 & 0.8610 & \textcolor{red}0.0013 \\
+        DA & RF & 0.9987 & 0.9670 & 0.9770 & 0.9901 & 0.8610 & \textcolor{darkred}{0.0013} \\
         \hline
-        FtU & XGB & 0.9987 & 0.9750 & 0.9813 & 0.9942 & 0.8610 & \textcolor{red}0.0019 \\
+        FtU & XGB & 0.9987 & 0.9750 & 0.9813 & 0.9942 & 0.8610 & \textcolor{darkred}{0.0019} \\
         \hline
-        FtU & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{red}0.0013 \\
+        FtU & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{darkred}{0.0013} \\
         \hline
-        EG & XGB & 0.9944 & 0.9779 & 0.9743 & 0.9919 & 0.8622 & \textcolor{red}0.0019 \\
+        EG & XGB & 0.9944 & 0.9779 & 0.9743 & 0.9919 & 0.8622 & \textcolor{darkred}{0.0019} \\
         \hline
-        EG & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{red}0.0013 \\
+        EG & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{darkred}{0.0013} \\
         \hline
-        \textcolor{red}GS & \textcolor{red}XGB & 0.5201 & 0.0000 & \textcolor{red}0.0000 & 0.0000 & 0.0000 & 0.0759 \\
+        \textcolor{darkred}{GS} & \textcolor{darkred}{XGB} & 0.5201 & 0.0000 & \textcolor{darkred}{0.0000} & 0.0000 & 0.0000 & 0.0759 \\
         \hline
-        GS & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{red}0.0013 \\
+        GS & RF & 0.9987 & 0.9697 & 0.9770 & 0.9901 & 0.8610 & \textcolor{darkred}{0.0013} \\
         \hline
     \end{tabular}
     \caption{Models training results for disparate impact metric}
@@ -289,7 +289,7 @@ About the results showed in \cref{tab:results_di} results it's possible to make 
         \hline
         EG & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013 \\
         \hline
-        \textcolor{red}GS & \textcolor{red}XGB & 0.5201 & 0.1204 & 0.0504 & 0.0556 & 0.0049 & 0.0759 \\
+        \textcolor{darkred}{GS} & \textcolor{darkred}{XGB} & 0.5201 & 0.1204 & 0.0504 & 0.0556 & 0.0049 & 0.0759 \\
         \hline
         GS & RF & 0.9987 & 0.0068 & 0.0032 & 0.0014 & 0.0023 & 0.0013 \\
         \hline
@@ -317,11 +317,11 @@ For each fairness algorithm employed in the Fair-by-Design workflow, the minimum
         \hline
         DA & 0.9975 & 0.9987 \\
         \hline
-        \textcolor{green}FtU & 0.9987 & 0.9987 \\
+        \textcolor{darkgreen}{FtU} & 0.9987 & 0.9987 \\
         \hline
         EG & 0.9944 & 0.9987 \\
         \hline
-        \textcolor{red}GS & 0.5201 & 0.9987 \\
+        \textcolor{darkred}GS & 0.5201 & 0.9987 \\
         \hline
     \end{tabular}
     \caption{Min-Max accuracy for each fairness algorithm}
@@ -349,9 +349,9 @@ Similarly, for each fairness algorithm, the minimum and maximum fairness values 
         \hline
         FtU & 0.9697 & 0.9750 \\
         \hline
-        \textcolor{green}EG & 0.9697 & 0.9779 \\
+        \textcolor{darkgreen}{EG} & 0.9697 & 0.9779 \\
         \hline
-        \textcolor{red}GS & 0.0000 & 0.9697 \\
+        \textcolor{darkred}{GS} & 0.0000 & 0.9697 \\
         \hline
     \end{tabular}
     \caption{Min-Max Disparate Impact value for \emph{Sex} protected attribute}
@@ -383,9 +383,9 @@ According to the analysis of the results it's possible to conclude that if the g
         \hline
         FtU & 0.9770 & 0.9813 \\
         \hline
-        \textcolor{green}EG & 0.9743 & 0.9770 \\
+        \textcolor{darkgreen}{EG} & 0.9743 & 0.9770 \\
         \hline
-        \textcolor{red}GS & 0.0000 & 0.9770 \\
+        \textcolor{darkred}{GS} & 0.0000 & 0.9770 \\
         \hline
     \end{tabular}
     \caption{Min-Max Disparate Impact value for \emph{Capital Island} protected attribute}
@@ -415,11 +415,11 @@ According to the analysis of the results it's possible to conclude that if the g
         \hline
         DA & 0.9901 & 0.9901 \\
         \hline
-        \textcolor{green}FtU & 0.9901 & 0.9942 \\
+        \textcolor{darkgreen}{FtU} & 0.9901 & 0.9942 \\
         \hline
         EG & 0.9901 & 0.9919 \\
         \hline
-        \textcolor{red}GS & 0.0000 & 0.9901 \\
+        \textcolor{darkred}{GS} & 0.0000 & 0.9901 \\
         \hline
     \end{tabular}
     \caption{Min-Max Disparate Impact value for \emph{Private-Public} protected attribute}
@@ -445,13 +445,13 @@ According to the analysis of the results it's possible to conclude that if the g
         \hline
         \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        \textcolor{green}DA & 0.8610 & 0.9340 \\
+        \textcolor{darkgreen}{DA} & 0.8610 & 0.9340 \\
         \hline
         FtU & 0.8610 & 0.8610 \\
         \hline
         EG & 0.8610 & 0.8622 \\
         \hline
-        \textcolor{red}GS & 0.0000 & 0.8610 \\
+        \textcolor{darkred}{GS} & 0.0000 & 0.8610 \\
         \hline
     \end{tabular}
     \caption{Min-Max Disparate Impact value for \emph{Household Income} protected attribute}
@@ -508,9 +508,9 @@ About the results reported in \cref{tab:e_di} it's possible to assess how the \e
         \hline
         FtU & 0.0056 & 0.0068 \\
         \hline
-        \textcolor{green}EG & 0.0049 & 0.0068 \\
+        \textcolor{darkgreen}{EG} & 0.0049 & 0.0068 \\
         \hline
-        \textcolor{red}GS & 0.0068 & 0.1204 \\
+        \textcolor{darkred}{GS} & 0.0068 & 0.1204 \\
         \hline
     \end{tabular}
     \caption{Min-Max Demographic Parity Difference value for \emph{Sex} protected attribute}
@@ -536,13 +536,13 @@ There are some considerations about the results reported in \cref{tab:s_dpd}:
         \hline
         \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        \textcolor{green}DA & 0.0026 & 0.0032 \\
+        \textcolor{darkgreen}{DA} & 0.0026 & 0.0032 \\
         \hline
-        \textcolor{green}FtU & 0.0026 & 0.0032 \\
+        \textcolor{darkgreen}{FtU} & 0.0026 & 0.0032 \\
         \hline
         EG & 0.0032 & 0.0036 \\
         \hline
-        \textcolor{red}GS & 0.0032 & 0.0556 \\
+        \textcolor{darkred}{GS} & 0.0032 & 0.0556 \\
         \hline
     \end{tabular}
     \caption{Min-Max Demographic Parity Difference value for \emph{Capital Island} protected attribute}
@@ -569,11 +569,11 @@ There are some considerations about the results reported in \cref{tab:ci_dpd}:
         \hline
         DA & 0.0014 & 0.0014 \\
         \hline
-        \textcolor{green}FtU & 0.0008 & 0.0014 \\
+        {\textcolor{darkgreen}{FtU} & 0.0008 & 0.0014 \\
         \hline
         EG & 0.0012 & 0.0014 \\
         \hline
-        \textcolor{red}GS & 0.0014 & 0.0556 \\
+        \textcolor{darkred}{GS} & 0.0014 & 0.0556 \\
         \hline
     \end{tabular}
     \caption{Min-Max Demographic Parity Difference value for \emph{Public-Private} protected attribute}
@@ -598,7 +598,7 @@ There are some considerations about the results reported in \cref{tab:pp_dpd}:
         \hline
         \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        \textcolor{green}DA & 0.0011 & 0.0023 \\
+        \textcolor{darkgreen}{DA} & 0.0011 & 0.0023 \\
         \hline
         FtU & 0.0023 & 0.0023 \\
         \hline
@@ -629,13 +629,13 @@ There are some considerations about the results reported in \cref{tab:h_dpd}:
         \hline
         \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        \textcolor{green}DA & 0.0007 & 0.0013 \\
+        \textcolor{darkgreen}{DA} & 0.0007 & 0.0013 \\
         \hline
         FtU & 0.0013 & 0.0019 \\
         \hline
         EG & 0.0013 & 0.0019 \\
         \hline
-        \textcolor{red}GS & 0.0013 & 0.0759 \\
+        \textcolor{darkred}GS & 0.0013 & 0.0759 \\
         \hline
     \end{tabular}
     \caption{Min-Max Demographic Parity Difference value for \emph{ESCS} protected attribute}
