--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -567,7 +567,7 @@ There are some considerations about the results reported in \cref{tab:ci_dpd}:
         \hline
         DA & 0.0014 & 0.0014 \\
         \hline
-        {\textcolor{darkgreen}{FtU} & 0.0008 & 0.0014 \\
+        \textcolor{darkgreen}{FtU} & 0.0008 & 0.0014 \\
         \hline
         EG & 0.0012 & 0.0014 \\
         \hline
