--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -705,7 +705,7 @@ Let $C$ be the sub-dataset of $D$ with a specific combination $\text{c\textunder
 
 In \cref{alg:prepro} is delighted the pseudocode of the previously described algorithm:
 
-\begin{algorithm}[H]
+\begin{algorithm}
     \caption{Data augmentation}
     \begin{algorithmic}[1]
         \State \textbf{Input:} combination\_set, combination\_frequency, protected\_attributes, dataset\_attributes
