--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -317,7 +317,7 @@ For each fairness algorithm employed in the Fair-by-Design workflow, the minimum
         \hline
         DA & 0.9975 & 0.9987 \\
         \hline
-        \textcolor{darkgreen}{FtU} & 0.9987 & 0.9987 \\
+        \textcolor{darkgreen}{\textbf{FtU}} & 0.9987 & 0.9987 \\
         \hline
         EG & 0.9944 & 0.9987 \\
         \hline
@@ -445,7 +445,7 @@ According to the analysis of the results it's possible to conclude that if the g
         \hline
         \textbf{FairAlg} & \textbf{Minimum value} & \textbf{Maximum Value} \\
         \hline
-        \textcolor{darkgreen}{DA} & 0.8610 & 0.9340 \\
+        \textcolor{darkgreen}{\textbf{DA}} & 0.8610 & 0.9340 \\
         \hline
         FtU & 0.8610 & 0.8610 \\
         \hline
